--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<meta name="author" content="Sarah Edelson, Seamus Lawton, Matthew Perkins" />
+<meta name="author" content="Sarah Edelson" />
 
 
 <title>Presidential Election Finance Data</title>
@@ -46,7 +46,7 @@
 <header>
 <div class="inner">
 <h1 class="title toc-ignore">Presidential Election Finance Data</h1>
-<h3 class="author">Sarah Edelson, Seamus Lawton, Matthew Perkins</h3>
+<h3 class="author">Sarah Edelson</h3>
 </div>
 </header>
 
