--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 <li>“Browse Individual Contributions.” FEC.gov, www.fec.gov/data/receipts/individual-contributions/?recipient_committee_type=P&amp;contributor_zip=01002&amp;contributor_city=Amherst&amp;two_year_transaction_period=2020.</li>
 <li>Schwartz, Brian. “Total 2020 Election Spending to Hit Nearly $14 Billion, More than Double 2016’s Sum.” CNBC, CNBC, 2 Nov. 2020, www.cnbc.com/2020/10/28/2020-election-spending-to-hit-nearly-14-billion-a-record.html.</li>
 <li>Wallace, Tim, and Krishna Karra. “The True Colors of America’s Political Spectrum Are Gray and Green.” The New York Times, The New York Times, 2 Sept. 2020, www.nytimes.com/interactive/2020/09/02/upshot/america-political-spectrum.html.</li>
+<li>“Wall Street Journal Theme - theme_wsj.” Ggthemes, jrnold.github.io/ggthemes/reference/theme_wsj.html.</li>
 <li>Wilke, Claus. “Relayer.” GitHub, github.com/clauswilke/relayer.</li>
 </ul>
 </div>
