--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <p>The network indicates that:</p>
 <ul>
 <li>The largest donors were skewed more towards Biden then Trump. Biden received support from six organizations, while Trump received support from two. Five organizations opposed Biden while six opposed Trump.</li>
-<li>Two organizations spent money supporting one candidate and opposing the other: the <strong>FF Pac</strong> and <strong>Priorities USA Action</strong> made expenditures supporting Joe Biden and opposing Donald Trump</li>
+<li>Two organizations spent money supporting one candidate and opposing the other: the <strong>FF Pac</strong> and <strong>Priorities USA Action</strong> made expenditures supporting Joe Biden and opposing Donald Trump.</li>
 <li>Candidate priorities align with donors. Conservatives have historically been large advocates for gun rights, explaining why the <strong>NRA Victory Fund</strong> would oppose Biden. Democrats are more invested in combating problems pertaining to climate change and environmental justice, leading the <strong>NextGen Climate Action Committee</strong> to support Biden.</li>
 </ul>
 <p>Moving forward, it would be interesting to examine how the number of PACs/organizations and their missions differ at different levels of expenditures.</p>
